icon: application icon
- only assets, don't speak meson, unfortunately

--- a/data/org.gnome.TextEditor.desktop.in
+++ b/data/org.gnome.TextEditor.desktop.in
@@ -4,6 +4,7 @@ DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;
 Name=Text Editor
+Icon=org.gnome.TextEditor
 StartupNotify=true
 Terminal=false
 Type=Application
