build: add support for development flags

--- a/data/org.gnome.TextEditor.desktop.in
+++ b/data/org.gnome.TextEditor.desktop.in
@@ -4,7 +4,7 @@ DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;
 Name=Text Editor
-Icon=org.gnome.TextEditor
+Icon=@app_id@
 StartupNotify=true
 Terminal=false
 Type=Application
