build: setup icon name based on app_id

--- a/meson.build
+++ b/meson.build
@@ -21,7 +21,7 @@ config_h.set_quoted('PACKAGE_VERSION', meson.project_version())
 config_h.set_quoted('GETTEXT_PACKAGE', 'gnome-text-editor')
 config_h.set_quoted('LOCALEDIR', join_paths(get_option('prefix'), get_option('localedir')))
 config_h.set_quoted('PACKAGE_WEBSITE', 'https://gitlab.gnome.org/GNOME/gnome-text-editor')
-config_h.set_quoted('PACKAGE_ICON_NAME', 'accessories-text-editor')
+config_h.set_quoted('PACKAGE_ICON_NAME', app_id)
 config_h.set_quoted('PACKAGE_NAME', 'Text Editor')
 config_h.set10('DEVELOPMENT_BUILD', get_option('development'))
 
