--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ include: 'https://gitlab.gnome.org/GNOME/citemplates/raw/master/flatpak/flatpak_
 flatpak:
     image: 'registry.gitlab.gnome.org/gnome/gnome-runtime-images/gnome:master'
     variables:
-        MANIFEST_PATH: "org.gnome.TextEditor.Devel.yml"
+        MANIFEST_PATH: "org.gnome.TextEditor.Devel.json"
         MESON_ARGS: "-Ddevelopment=true"
         FLATPAK_MODULE: "gnome-text-editor"
         APP_ID: "org.gnome.TextEditor.Devel"
