icons: fix devel symbolic app icon
Fixes #20

--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,8 +1,12 @@
 icondir = join_paths(get_option('datadir'), 'icons/hicolor')
 
-install_data(['org.gnome.TextEditor.svg'], install_dir: join_paths(icondir, 'scalable/apps'))
-install_data(['org.gnome.TextEditor-symbolic.svg'], install_dir: join_paths(icondir, 'symbolic/apps'))
+install_data(
+  '@0@.svg'.format(app_id),
+  install_dir: join_paths(icondir, 'scalable/apps'),
+)
 
-if get_option('development')
-  install_data(['org.gnome.TextEditor.Devel.svg'], install_dir: join_paths(icondir, 'scalable/apps'))
-endif
+install_data(
+  'org.gnome.TextEditor-symbolic.svg',
+  install_dir: join_paths(icondir, 'symbolic/apps'),
+  rename: '@0@-symbolic.svg'.format(app_id),
+)
