modelines: add settings provider for kate/emacs/vim style modelines
This still needs to be plumbed to a GSetting for automatic right margin
position (or something more specific).

--- a/src/meson.build
+++ b/src/meson.build
@@ -35,6 +35,9 @@ editor_sources = [
   'editor-window.c',
   'editor-window-actions.c',
   'main.c',
+
+  'modelines/modeline-parser.c',
+  'modelines/editor-modeline-settings-provider.c',
 ]
 
 editor_deps = [
