--- a/src/meson.build
+++ b/src/meson.build
@@ -2,11 +2,9 @@ editor_sources = [
   'editor-animation.c',
   'editor-application.c',
   'editor-application-actions.c',
-  'editor-bin.c',
   'editor-binding-group.c',
   'editor-buffer-monitor.c',
   'editor-document.c',
-  'editor-filter-model.c',
   'editor-frame-source.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
@@ -42,10 +40,8 @@ editor_sources = [
 
 editor_deps = [
   cc.find_library('m', required: false),
-  dependency('gio-2.0', version: '>= 2.50'),
-  dependency('gtk+-3.0', version: '>= 3.24'),
-  dependency('gtksourceview-4', version: '>= 4.6'),
-  dependency('libhandy-1'),
+  dependency('gtk4', version: '>= 4.0'),
+  dependency('gtksourceview-5', version: '>= 4.90'),
 ]
 
 editor_sources += gnome.compile_resources('editor-resources',
