window: use popover instead of sidebar
This suffles some things around to allow for a popover instead of
a sidebar for the recent items, including search and browse.

Session will return a Page for various operations which might be
useful going forward.

A recents model is now part of the session, making it easier to
bind to the listview.

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ editor_sources = [
   'editor-frame-source.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
+  'editor-open-popover.c',
   'editor-page.c',
   'editor-page-actions.c',
   'editor-page-gsettings.c',
@@ -23,7 +24,6 @@ editor_sources = [
   'editor-print-operation.c',
   'editor-search-bar.c',
   'editor-session.c',
-  'editor-sidebar.c',
   'editor-sidebar-item.c',
   'editor-sidebar-model.c',
   'editor-sidebar-row.c',
