infobar: add unified infobar for new designs
The new designs have a lot of overlap so we can use a single infobar with
some state tracking to cover all their use cases.

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,6 +5,7 @@ editor_sources = [
   'editor-binding-group.c',
   'editor-buffer-monitor.c',
   'editor-document.c',
+  'editor-info-bar.c',
   'editor-frame-source.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
