save-changes: implement mockup for save change dialog
This uses an async/finish pair that can be called from the application
or window actions.

It could definitely use some testing if you're up for it. The mechanics
sort of change a bit than how they were in the past (on purpose) to match
the mockups.

There was a little bit of ambiguity in what to do for drafts that have
not been saved, so I tried to figure out what the mockup meant. My best
guess is that we try to save them in ~/Documents.

If something is not saved (ie: unchecked) I do try to keep the draft
around for the next run to reduce chances of destroying data that the
user may have cared about.

--- a/src/meson.build
+++ b/src/meson.build
@@ -23,6 +23,7 @@ editor_sources = [
   'editor-preferences-switch.c',
   'editor-preferences-window.c',
   'editor-print-operation.c',
+  'editor-save-changes-dialog.c',
   'editor-search-bar.c',
   'editor-session.c',
   'editor-sidebar-item.c',
