--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -24,11 +24,7 @@
   </screenshots>
 
   <releases>
-    <release version="3.37.1" date="2020-04-17">
-      <description>
-        <p>Initial release of Text Editor.</p>
-      </description>
-    </release>
+    <release version="3.39.92" date="2021-03-05"/>
   </releases>
 
   <kudos>
