--- a/meson.build
+++ b/meson.build
@@ -37,7 +37,7 @@ test_c_args = [
   '-Werror=empty-body',
   '-Werror=implicit',
   '-Werror=implicit-function-declaration',
-  '-Werror=incompatible-pointer-types',
+  # '-Werror=incompatible-pointer-types',
   '-Werror=init-self',
   '-Werror=int-conversion',
   '-Werror=int-to-pointer-cast',
