icons: add icon for document-modified
This just looks like a bullet as we do in the tab. Using an icon may allow
us to integrate AdwTab until we have modified state tracking there.

--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -10,3 +10,5 @@ install_data(
   install_dir: join_paths(icondir, 'symbolic/apps'),
   rename: '@0@-symbolic.svg'.format(app_id),
 )
+
+subdir('hicolor')
