--- a/data/meson.build
+++ b/data/meson.build
@@ -47,16 +47,10 @@ if appstream_util.found()
   )
 endif
 
+gnome.compile_schemas(build_by_default: true)
 install_data('org.gnome.TextEditor.gschema.xml',
   install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
 )
-
-compile_schemas = find_program('glib-compile-schemas', required: false)
-if compile_schemas.found()
-  test('Validate schema file', compile_schemas,
-    args: ['--strict', '--dry-run', meson.current_source_dir()]
-  )
-endif
 
 # D-Bus service file.
 dbusconf = configuration_data()
