Meson: Use gnome.post_install()
It has a few advantages:
- It uses gtk4-update-icon-cache, current script fails if gtk3 is not
  installed.
- Get path for tools from pc files, they are not always in PATH.
- The script is ran only once even if multiple subprojects use it.

--- a/meson.build
+++ b/meson.build
@@ -162,4 +162,8 @@ configure_file(
   configuration: config_h,
 )
 
-meson.add_install_script('build-aux/meson/postinstall.py')
+gnome.post_install(
+  gtk_update_icon_cache: true,
+  glib_compile_schemas: true,
+  update_desktop_database: true,
+)
