spellcheck: stub out menus for spell checking

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,6 +7,7 @@ editor_sources = [
   'editor-document.c',
   'editor-info-bar.c',
   'editor-frame-source.c',
+  'editor-joined-menu.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
   'editor-open-popover.c',
@@ -32,6 +33,7 @@ editor_sources = [
   'editor-signal-group.c',
   'editor-spell-checker.c',
   'editor-spell-language.c',
+  'editor-spell-menu.c',
   'editor-spell-provider.c',
   'editor-theme-selector.c',
   'editor-utils.c',
