spellcheck: plumb buffer information to spell adapter
The goal of the spell adapter is to handle the details of driving the
spellcheck so that it can live outside of EditorDocument. That also makes
it easier to migrate or use elsewhere in the future without having to
extract it from EditorDocument (such as into GtkTextBuffer).

--- a/src/meson.build
+++ b/src/meson.build
@@ -36,6 +36,7 @@ editor_sources = [
   'editor-spell-language.c',
   'editor-spell-menu.c',
   'editor-spell-provider.c',
+  'editor-text-buffer-spell-adapter.c',
   'editor-theme-selector.c',
   'editor-utils.c',
   'editor-window.c',
