page: work around GtkTextView ctrl+page_up/down
We would rather have this for controlling the tabs in the tab view to feel
like what people are used to in other places (Nautilus, Terminal, Firefox,
etc).

Related to https://gitlab.gnome.org/GNOME/libadwaita/-/issues/222

--- a/src/meson.build
+++ b/src/meson.build
@@ -32,6 +32,7 @@ editor_sources = [
   'editor-sidebar-model.c',
   'editor-sidebar-row.c',
   'editor-signal-group.c',
+  'editor-source-view.c',
   'editor-spell-checker.c',
   'editor-spell-cursor.c',
   'editor-spell-language.c',
