--- a/src/enchant/meson.build
+++ b/src/enchant/meson.build
@@ -1,4 +1,5 @@
-editor_deps += [libenchant_dep]
+editor_deps += [libenchant_dep, libicu_dep]
+
 editor_sources += files([
   'editor-enchant-spell-language.c',
   'editor-enchant-spell-provider.c',
