--- a/src/meson.build
+++ b/src/meson.build
@@ -91,3 +91,9 @@ editor = executable('gnome-text-editor', editor_sources + editor_enums + [build_
          dependencies: editor_deps,
               install: true,
 )
+
+test_spell_cursor = executable('test-spell-cursor', 'test-spell-cursor.c',
+  dependencies: libgtk_dep,
+  include_directories: [include_directories('..')],
+)
+test('test-spell-cursor', test_spell_cursor)
