build: bump version to 41.alpha0

--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,8 @@
 project('gnome-text-editor', 'c',
-          version: '40.0',
+          version: '41.alpha0',
     meson_version: '>= 0.50.0',
   default_options: [ 'warning_level=2', 'c_std=gnu18' ],
 )
-
-symbolic_version = '40.0'
 
 cc = meson.get_compiler('c')
 
@@ -58,7 +56,6 @@ config_h.set_quoted('LOCALEDIR', join_paths(get_option('prefix'), get_option('lo
 config_h.set_quoted('PACKAGE_WEBSITE', 'https://gitlab.gnome.org/GNOME/gnome-text-editor')
 config_h.set_quoted('PACKAGE_ICON_NAME', app_id)
 config_h.set_quoted('PACKAGE_NAME', 'Text Editor')
-config_h.set_quoted('SYMBOLIC_VERSION', symbolic_version)
 config_h.set10('DEVELOPMENT_BUILD', get_option('development'))
 
 global_c_args = [
