--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -4,6 +4,7 @@ DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;
 Name=Text Editor
+# Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=@app_id@
 StartupNotify=true
 Terminal=false
