session: add --ignore-session command line option
This is a bit of an escape hatch to avoid loading pages when restarting
text editor. There are other things we can do better long term, but this
at least gives us some flexibility to recover.

Fixes #134

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ data/org.gnome.TextEditor.appdata.xml.in.in
 data/org.gnome.TextEditor.desktop.in.in
 data/org.gnome.TextEditor.gschema.xml
 src/editor-animation.c
+src/editor-application.c
 src/editor-application-actions.c
 src/editor-document.c
 src/editor-info-bar.c
