help/edit: Add help page for undo/redo
This page details how to use the undo and redo shortcuts, and the
Discard Changes functionality.

--- a/help/meson.build
+++ b/help/meson.build
@@ -4,6 +4,7 @@ pages = [
   'basics-create-new-file.page',
   'basics-draft-folder.page',
   'edit-search-and-replace.page',
+  'edit-undo-redo.page',
   'legal.xml',
 ]
 
