--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -24,7 +24,7 @@
   </screenshots>
 
   <releases>
-    <release version="41.beta1" date="2021-08-25"/>
+    <release version="41.0" date="2021-09-3"/>
   </releases>
 
   <kudos>
