--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('gnome-text-editor', 'c',
-          version: '41.0',
-    meson_version: '>= 0.50.0',
+          version: '42.alpha0',
+    meson_version: '>= 0.59.1',
   default_options: [ 'warning_level=2', 'c_std=gnu18' ],
 )
 
