--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -25,7 +25,16 @@
   </screenshots>
 
   <releases>
-    <release version="41.0" date="2021-09-3"/>
+    <release version="41.1" date="2021-10-06">
+      <ul>
+        <li>Improved styling.</li>
+        <li>Give access to --filesystem=host in Flatpak until we have an improved document portal story.</li>
+        <li>Raise editor window when raising a page due to opening by an external program.</li>
+        <li>Fix keyboard navigation with arrows in search entry.</li>
+        <li>Fix reordering of editor pages with the keyboard.</li>
+      </ul>
+    </release>
+    <release version="41.0" date="2021-09-03"/>
   </releases>
 
   <kudos>
