searchbar: use custom entry for search entry
This gives us basically what we used to have in GTK 3 with the
GdTaggedEntry but specific for the search bar pattern within Text Editor.

Fixes #147

--- a/src/meson.build
+++ b/src/meson.build
@@ -26,6 +26,7 @@ editor_sources = [
   'editor-print-operation.c',
   'editor-save-changes-dialog.c',
   'editor-search-bar.c',
+  'editor-search-entry.c',
   'editor-session.c',
   'editor-sidebar-item.c',
   'editor-sidebar-model.c',
