--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,18 +4,20 @@ data/org.gnome.TextEditor.appdata.xml.in.in
 data/org.gnome.TextEditor.desktop.in.in
 data/org.gnome.TextEditor.gschema.xml
 src/editor-animation.c
-src/editor-application.c
 src/editor-application-actions.c
+src/editor-application.c
 src/editor-document.c
 src/editor-info-bar.c
 src/editor-info-bar.ui
 src/editor-language-dialog.ui
 src/editor-open-popover.ui
 src/editor-page.c
+src/editor-page.ui
 src/editor-position-label.ui
 src/editor-preferences-font.c
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
+src/editor-search-entry.c
 src/editor-sidebar-item.c
 src/editor-sidebar.ui
 src/editor-spell-menu.c
