build: never disable assertions in tests
Another way to resolve !32 without compromising the rest of the build
artifacts in production builds.

--- a/src/meson.build
+++ b/src/meson.build
@@ -95,5 +95,6 @@ editor = executable('gnome-text-editor', editor_sources + editor_enums + [build_
 test_spell_cursor = executable('test-spell-cursor', 'test-spell-cursor.c',
   dependencies: [libgtk_dep, libgtksourceview_dep],
   include_directories: [include_directories('..')],
+  c_args: [ '-UG_DISABLE_ASSERT' ],
 )
 test('test-spell-cursor', test_spell_cursor)
