vim: add support for vim keybindings
This is currently hidden behind the gsettings 'keybindings' key. You may
`gsettings set org.gnome.TextEditor keybindings vim` to enable it, although
in Flatpak you'll need to edit the settings file.

This uses the new GtkSourceVimIMContext along with a command bar widget on
the bottom that is only visible when Vim bindings are enabled.

Use with caution, and file bugs please (or better yet, fix them).

--- a/src/meson.build
+++ b/src/meson.build
@@ -17,6 +17,7 @@ editor_sources = [
   'editor-page-gsettings.c',
   'editor-page-settings.c',
   'editor-page-settings-provider.c',
+  'editor-page-vim.c',
   'editor-path.c',
   'editor-position-label.c',
   'editor-preferences-font.c',
