appdata: add translate tag

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -15,6 +15,7 @@
   <url type="homepage">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-text-editor/issues</url>
   <url type="donation">http://www.gnome.org/friends/</url>
+  <url type="translate">https://wiki.gnome.org/TranslationProject</url>
 
   <screenshots>
     <screenshot type="default">
