appdata: add translation tag

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -25,6 +25,8 @@
     </screenshot>
   </screenshots>
 
+  <translation type="gettext">org.gnome.TextEditor</translation>
+
   <releases>
     <release version="41.0" date="2021-09-3"/>
   </releases>
