recoloring: expiriment with recoloring
This can restyle the window based on colors from the GtkSourceStyleScheme.
However, it just uses known styles to do this which is not exactly the
best way to handle it. We need more control over styling from the style
schemes in this case.

My thoughts here are to add additional API to GtkSourceStyleScheme so you
can get named colors. Then the style schemes themselves can export colors
of a given name and if those are found, the scheme is capable for
recoloring.

Related #139

--- a/src/meson.build
+++ b/src/meson.build
@@ -25,6 +25,7 @@ editor_sources = [
   'editor-preferences-spin.c',
   'editor-preferences-switch.c',
   'editor-print-operation.c',
+  'editor-recoloring.c',
   'editor-save-changes-dialog.c',
   'editor-search-bar.c',
   'editor-search-entry.c',
