preferences: switch to preferences window
This moves us back to a AdwPreferencesWindow but using a new design. It
does need some more work still, but this is far enough to be generally
useful while we figure out the rest of the tweaks.

It still needs:

 * Preview the custom font (by setting up CSS for the sourceview)
 * Show the proper scheme after light/dark has changed
 * Various other tweaks

But either way good enough to get some feedback.

Related #183

--- a/src/meson.build
+++ b/src/meson.build
@@ -20,6 +20,7 @@ editor_sources = [
   'editor-page-vim.c',
   'editor-path.c',
   'editor-position-label.c',
+  'editor-preferences-dialog.c',
   'editor-preferences-font.c',
   'editor-preferences-radio.c',
   'editor-preferences-spin.c',
