--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/editor-open-popover.ui
 src/editor-page.c
 src/editor-page.ui
 src/editor-position-label.ui
+src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
@@ -27,4 +28,3 @@ src/editor-window.c
 src/editor-window.ui
 src/enchant/editor-enchant-spell-provider.c
 src/help-overlay.ui
-src/menus.ui
