--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -20,15 +20,16 @@
   <screenshots>
     <screenshot type="default">
       <caption></caption>
-      <image width="1476" height="1210">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/e73d97599c1ca47b650d9870f1f29f6bfeffe5e2/data/appdata/text-editor-1.png</image>
-      <image width="2054" height="1518">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/e73d97599c1ca47b650d9870f1f29f6bfeffe5e2/data/appdata/text-editor-2.png</image>
+      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-1.png</image>
+      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-2.png</image>
+      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-3.png</image>
     </screenshot>
   </screenshots>
 
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
-    <release version="41.0" date="2021-09-3"/>
+    <release version="42.alpha1" date="2021-12-08"/>
   </releases>
 
   <kudos>
