--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,6 +16,7 @@ src/editor-page.ui
 src/editor-position-label.ui
 src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
+src/editor-print-operation.c
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
 src/editor-search-entry.c
