styles: start on another light scheme
We should be able to make a dark variant of this as well. It's loosely
based on some colors seen in Xcode screenshots.

Related #254

--- a/data/styles/meson.build
+++ b/data/styles/meson.build
@@ -1,4 +1,5 @@
 install_data([
   'builder.xml',
   'builder-dark.xml',
+  'peninsula.xml',
 ], install_dir: join_paths(get_option('datadir'), 'gtksourceview-5/styles'))
