--- a/data/styles/meson.build
+++ b/data/styles/meson.build
@@ -2,4 +2,5 @@ install_data([
   'builder.xml',
   'builder-dark.xml',
   'peninsula.xml',
+  'peninsula-dark.xml',
 ], install_dir: join_paths(get_option('datadir'), 'gtksourceview-5/styles'))
