filemanager: add helper to talk to desktop File Manager
This will eventually allow us to open a file within the file manager such
as Nautilus and browse directly to the file within the opened view.

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ editor_sources = [
   'editor-document.c',
   'editor-info-bar.c',
   'editor-frame-source.c',
+  'editor-file-manager.c',
   'editor-joined-menu.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
