--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ src/editor-animation.c
 src/editor-application-actions.c
 src/editor-application.c
 src/editor-document.c
+src/editor-file-manager.c
 src/editor-info-bar.c
 src/editor-info-bar.ui
 src/editor-language-dialog.ui
