--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -19,6 +19,7 @@ src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
 src/editor-print-operation.c
 src/editor-properties-dialog.c
+src/editor-properties-dialog.ui
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
 src/editor-search-entry.c
