build: keep style-schemes in private directory
We don't need to install these to the public directory, instead keep them
private so we don't collide with any other applications.

--- a/data/styles/meson.build
+++ b/data/styles/meson.build
@@ -3,4 +3,5 @@ install_data([
   'builder-dark.xml',
   'peninsula.xml',
   'peninsula-dark.xml',
-], install_dir: join_paths(get_option('datadir'), 'gtksourceview-5/styles'))
+  'printing.xml',
+], install_dir: join_paths(get_option('datadir'), 'gnome-text-editor/styles'))
