--- a/meson.build
+++ b/meson.build
@@ -26,7 +26,7 @@ gtk_req = '>= @0@'.format(gtk_req_version)
 gtksourceview_req = '>= @0@'.format(gtksourceview_req_version)
 enchant_req = '>= @0@'.format(enchant_req_version)
 
-libglib_dep = dependency('gio-unix-2.0', version: glib_req)
+libglib_dep = dependency('gio-2.0', version: glib_req)
 libgtk_dep = dependency('gtk4', version: gtk_req)
 libgtksourceview_dep = dependency('gtksourceview-5', version: gtksourceview_req)
 libadwaita_dep = dependency('libadwaita-1')
