--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,42 @@ fedora:
         - mkdir -p pfx/
         - meson ${MESON_FLAGS} --prefix=${PWD}/pfx _build
         - ninja -C _build install
+
+macos:
+    extends: .only-default
+    only:
+        - branches@GNOME/gnome-text-editor
+    tags:
+        - macos
+    needs: []
+    before_script:
+        - bash .gitlab-ci/show-info-osx.sh
+        - pip3 install --user meson==0.59
+        - pip3 install --user ninja
+        - export PATH=/Users/gitlabrunner/Library/Python/3.7/bin:$PATH
+    variables:
+        MESON_FORCE_BACKTRACE: "1"
+    script:
+        - mkdir -p pfx/
+        - meson -Dgtk:x11-backend=false
+                -Dgtk:broadway-backend=true
+                -Dgtk:macos-backend=true
+                -Dgtk:media-gstreamer=disabled
+                -Dgtk:introspection=disabled
+                -Dgtk:demos=false
+                -Dgtk:build-examples=false
+                -Dgtk:build-tests=false
+                -Dcpp_std=c++11
+                -Dpixman:tests=disabled
+                -Dglib:werror=false
+                -Dgtksourceview:werror=false
+                -Dgtk:werror=false
+                -Dlibadwaita:werror=false
+                -Dlibsass:werror=false
+                -Dsassc:werror=false
+                _build
+        - ninja -C _build
+    artifacts:
+        when: always
+        paths:
+            - "${CI_PROJECT_DIR}/_build/meson-logs"
